--- a/foto.html
+++ b/foto.html
@@ -45,11 +45,11 @@
             <h2>Iznenađenje</h2>
             <div class="gallery">
                 <div class="image-card">
-                    <img src="https://picsum.photos/seed/500/150" alt="Nasumično 1">
+                    <img src="https://picsum.photos/200/300?random=1" alt="Nasumično 1">
                     <p>Gužva na stanici</p>
                 </div>
                 <div class="image-card">
-                    <img src="https://picsum.photos/seed/200/150" alt="Nasumično 1">
+                    <img src="https://picsum.photos/200/300?random=2" alt="Nasumično 1">
                     <p>Pogled na vodopad</p>
                 </div>
                 <div class="image-card">
